m/n/core/cluster: factor out bootstrap into separate file
Test Plan: Refactor.

X-Origin-Diff: phab/D753
GitOrigin-RevId: 2e39db6673b2a0a6c1d7593f230fa691643e4c06

--- a/metropolis/node/core/cluster/BUILD.bazel
+++ b/metropolis/node/core/cluster/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "cluster.go",
         "configuration.go",
         "manager.go",
+        "manager_bootstrap.go",
         "node.go",
     ],
     importpath = "source.monogon.dev/metropolis/node/core/cluster",
