--- a/metropolis/node/kubernetes/plugins/kvmdevice/BUILD.bazel
+++ b/metropolis/node/kubernetes/plugins/kvmdevice/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//metropolis/node/core/localstorage:go_default_library",
         "//metropolis/pkg/logtree:go_default_library",
         "//metropolis/pkg/supervisor:go_default_library",
+        "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_kubelet//pkg/apis/deviceplugin/v1beta1:go_default_library",
         "@io_k8s_kubelet//pkg/apis/pluginregistration/v1:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
