m/n/core/curator: implement leader and Node/PKI state
This implements actual Curator logic for nodes and PKI. These will
replace the cluster manager's equivalent logic.

There are two entry points to this logic:

 - the gRPC service's Watch method for accessing node status
 - bootstrap logic to create a node when the cluster manager bootstraps
   the cluster.

Test plan: a followup CR will introduce tests for the Curator - more
granular than the full E2E suite. DO NOT MERGE UNTIL THEN, as this is
critical code.

Change-Id: I8c40a821b846012b90cf9a5df27901d1b49f388c
Reviewed-on: https://review.monogon.dev/c/monogon/+/186
Reviewed-by: Lorenz Brun <lorenz@nexantic.com>

--- a/metropolis/node/core/curator/proto/private/BUILD.bazel
+++ b/metropolis/node/core/curator/proto/private/BUILD.bazel
@@ -4,8 +4,12 @@ load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 proto_library(
     name = "private_proto",
-    srcs = ["lock.proto"],
+    srcs = [
+        "lock.proto",
+        "storage.proto",
+    ],
     visibility = ["//visibility:public"],
+    deps = ["//metropolis/proto/common:common_proto"],
 )
 
 go_proto_library(
@@ -13,6 +17,7 @@ go_proto_library(
     importpath = "source.monogon.dev/metropolis/node/core/curator/proto/private",
     proto = ":private_proto",
     visibility = ["//visibility:public"],
+    deps = ["//metropolis/proto/common:go_default_library"],
 )
 
 go_library(
