m/n/c/consensus_test: move timeout handling to Bazel
The test regularly exceeds timeout on slower machines, and besides,
that's the proper way to do it.

Change-Id: Ic4a8ac717bd7f6e70d4d4ac0b156f42ff5addef8
Reviewed-on: https://review.monogon.dev/c/monogon/+/215
Reviewed-by: Leopold Schabel <leo@nexantic.com>
Reviewed-by: Sergiusz Bazanski <serge@nexantic.com>

--- a/metropolis/node/core/consensus/BUILD.bazel
+++ b/metropolis/node/core/consensus/BUILD.bazel
@@ -25,6 +25,7 @@ go_library(
 
 go_test(
     name = "go_default_test",
+    size = "small",
     srcs = [
         "consensus_test.go",
         "logparser_test.go",
