--- a/metropolis/pkg/logtree/BUILD.bazel
+++ b/metropolis/pkg/logtree/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "logtree_access.go",
         "logtree_entry.go",
         "logtree_publisher.go",
+        "testhelpers.go",
     ],
     importpath = "source.monogon.dev/metropolis/pkg/logtree",
     visibility = ["//metropolis:__subpackages__"],
