--- a/metropolis/node/core/curator/BUILD.bazel
+++ b/metropolis/node/core/curator/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "curator.go",
         "impl_follower.go",
         "impl_leader.go",
+        "impl_leader_curator.go",
         "listener.go",
         "state_node.go",
         "state_pki.go",
@@ -44,7 +45,6 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//metropolis/node/core/consensus/client:go_default_library",
-        "//metropolis/node/core/curator/proto/api:go_default_library",
         "//metropolis/node/core/localstorage:go_default_library",
         "//metropolis/node/core/localstorage/declarative:go_default_library",
         "//metropolis/pkg/event/memory:go_default_library",
