m/n/c/curator: implement AAA.Escrow for initial owner pubkey
This finally implements AAA.Escrow in Metropolis.

We're not yet implementing multi-user support, so this currently only
implements retrieving an Owner certificate using the owner public key
specified in NodeParameters.cluster_bootstrap.

Change-Id: I64a7ba025a8069d82b3c804ca3e2a706de2b0fbf
Reviewed-on: https://review.monogon.dev/c/monogon/+/289
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/core/curator/BUILD.bazel
+++ b/metropolis/node/core/curator/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "curator.go",
         "impl_follower.go",
         "impl_leader.go",
+        "impl_leader_aaa.go",
         "impl_leader_curator.go",
         "listener.go",
         "state_node.go",
@@ -26,12 +27,14 @@ go_library(
         "//metropolis/pkg/event/memory:go_default_library",
         "//metropolis/pkg/pki:go_default_library",
         "//metropolis/pkg/supervisor:go_default_library",
+        "//metropolis/proto/api:go_default_library",
         "//metropolis/proto/common:go_default_library",
         "@io_etcd_go_etcd//clientv3:go_default_library",
         "@io_etcd_go_etcd//clientv3/concurrency:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//credentials:go_default_library",
+        "@org_golang_google_grpc//peer:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
         "@org_golang_google_protobuf//proto:go_default_library",
         "@org_golang_x_sys//unix:go_default_library",
