m/n/core/curator: add thin etcd storage abstraction
This implements etcdPrefix, a more formalized way to represent objects
stored within etcd under some unique ID key.

This ensures any time objects are retrieved by key they are not
accidentally traversing /-delimited 'path' elements, and implements the
mildly complex range start/end computation operation for when all
objects from within a prefix must retrieved.

Change-Id: Ib095f466faaf453b5f61a35642df6b0c1076ae05
Reviewed-on: https://review.monogon.dev/c/monogon/+/322
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/core/curator/BUILD.bazel
+++ b/metropolis/node/core/curator/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "impl_leader_curator.go",
         "impl_leader_management.go",
         "listener.go",
+        "state.go",
         "state_node.go",
         "state_pki.go",
     ],
@@ -49,6 +50,7 @@ go_test(
         "curator_test.go",
         "impl_leader_test.go",
         "listener_test.go",
+        "state_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
