m/n/k/containerd: less verbose runsc logging
This disables debug logging on non -c dbg builds of Metropolis, making
the console output less verbose.

This should maybe just be 'fixed' by making logtree -> console smarter,
ie. implement log output filters, but this will do for now - and I think
in general we don't want to have super verbose per-syscall logging
enabled unless necessary.

The implementation picks between two runsc .tomls to build the node
image with, which works for now but we might have to move to a
full-blown config generator (build-time or runtime) when we also start
having differences between containerd.toml.

Change-Id: I5539ca6f4763a769e879f7d50637aa36f3ffd29b
Reviewed-on: https://review.monogon.dev/c/monogon/+/327
Reviewed-by: Mateusz Zalega <mateusz@monogon.tech>

--- a/metropolis/node/kubernetes/containerd/BUILD.bazel
+++ b/metropolis/node/kubernetes/containerd/BUILD.bazel
@@ -15,6 +15,14 @@ go_library(
 
 exports_files([
     "config.toml",
-    "runsc.toml",
     "cnispec.gojson",
 ])
+
+alias(
+    name = "runsc.toml",
+    actual = select({
+        "//metropolis/node:debug_build": ":runsc_debug.toml",
+        "//conditions:default": ":runsc_nondebug.toml",
+    }),
+    visibility = ["//metropolis/node:__pkg__"],
+)
