--- a/metropolis/node/core/curator/BUILD.bazel
+++ b/metropolis/node/core/curator/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "state.go",
         "state_node.go",
         "state_pki.go",
+        "state_registerticket.go",
     ],
     importpath = "source.monogon.dev/metropolis/node/core/curator",
     visibility = ["//visibility:public"],
